# ig-media-kit

./: .gitignore  CLAUDE.md  README.md  config.yaml  problem-statement.md  pyproject.toml
.claude/handoff/: INDEX.md  LOG.md  README.md
.claude/handoff/fetch-engine-store-foundation/: _thread.md  (+4 more)
decisions/: INDEX.md
decisions/architecture/: 2026-07-15-discovery-correctness-rests-on-per-shortcode.md  2026-07-15-serve-from-store-no-network-gate-keys-on.md  2026-07-16-daemon-thread-batch-runner-with-explicit-resume.md  2026-07-16-observable-product-type-registry-skipreason.md  2026-07-16-persist-refreshed-url-to-manifest.md  2026-07-16-targeted-re-resolve-find-by-identity-traversal.md  2026-07-16-unknown-shortcode-typed-error-no-search.md  2026-07-16-url-refresh-24h-ttl-margin.md  2026-07-18-fetch-primitive-extracted-into-fill-run-fill.md
probe/: probe_batch.py  probe_download.py  probe_smoke.py  probe_spike.py
research/no-login-reel-fetch/: architecture.html  report.md
src/ig_media_kit/: __init__.py  batch.py  config.py  coverage.py  download.py  fetch.py  fetch_gate.py  fill.py  http_client.py  list_reels.py  mcp_server.py  ranking.py  store.py  window.py
tests/: conftest.py  test_anonymity.py  test_batch.py  test_config.py  test_coverage.py  test_cursor.py  test_dedupe.py  test_download.py  test_fetch_gate.py  test_fill.py  test_import_boundary.py  test_list_reels.py  test_mcp_server.py  test_normalizer.py  test_pinned_prefix.py  test_product_type_dispatch.py  test_ranking.py  test_smoke.py  test_stop_signal.py
tests/fixtures/: feed_sample.json
(+60 files in other folders)
