[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ig-media-kit"
version = "0.1.0"
description = "Self-hosted MCP that anonymously fetches top Instagram reels (with view counts) from a list of channels."
requires-python = ">=3.12"
dependencies = [
    "curl_cffi>=0.7",
    "mcp[cli]>=1.2",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ig-media-kit = "ig_media_kit.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
